--- a/index.html
+++ b/index.html
@@ -27,6 +27,36 @@
   
 </head>
 <body>
+  
+  <!— Yandex.Metrika counter —> 
+<script type="text/javascript"> 
+(function (d, w, c) { 
+(w[c] = w[c] || []).push(function() { 
+try { 
+w.yaCounter45158814 = new Ya.Metrika({ 
+id:45158814, 
+clickmap:true, 
+trackLinks:true, 
+accurateTrackBounce:true 
+}); 
+} catch(e) { } 
+}); 
+
+var n = d.getElementsByTagName("script")[0], 
+s = d.createElement("script"), 
+f = function () { n.parentNode.insertBefore(s, n); }; 
+s.type = "text/javascript"; 
+s.async = true; 
+s.src = "https://mc.yandex.ru/metrika/watch.js"; 
+
+if (w.opera == "[object Opera]") { 
+d.addEventListener("DOMContentLoaded", f, false); 
+} else { f(); } 
+})(document, window, "yandex_metrika_callbacks"); 
+</script> 
+<noscript><div><img src="https://mc.yandex.ru/watch/45158814" style="position:absolute; left:-9999px;" alt="" /></div></noscript> 
+<!— /Yandex.Metrika counter —>
+  
 <section id="menu-l">
 
     <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
