--- a/page1.html
+++ b/page1.html
@@ -35,7 +35,7 @@
 
                     <div class="navbar-brand">
                         <a href="радецкий.рф" class="socicon socicon-paypal mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption" href="https://mobirise.com"></a>
+                        <a class="navbar-caption" href="radezki.github.io">Медийный ведущий в Москве</a>
                     </div>
 
                 </div>
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">OVERVIEW</a><div class="dropdown-menu"><a class="dropdown-item" href="#">New Item</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-info-outline btn-info" href="https://mobirise.com/">ИЛЬЯ РАДЕЦКИЙ +7916 774 15 91</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">ОБО МНЕ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#msg-box4-0" aria-expanded="false">ВИДЕО</a></li><li class="nav-item"><a class="nav-link link" href="index.html#testimonials1-4" aria-expanded="false">ОТЗЫВЫ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#form1-6" aria-expanded="false">КОНТАКТЫ</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#form1-6" target="_blank">+7(916) 774 15 91</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/uqlpn774luq-2000x1332.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/uqlpn774luq-2000x1332.jpg);">
 
     
 
@@ -350,7 +350,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Есть вопросы? пишите">
 
-                        <input type="hidden" value="s71VBhVw3VGCizzh/aX3nf1oreylf57+VriFvpfOWlWYEj/+VeiS1G4iTOnD048lb5M5pKbMESk2lW5zgEisVY13dOayUH8h0VNQ3kDpbVTsi1xBhs5vCZ2gpdl//D18" data-form-email="true">
+                        <input type="hidden" value="NagUfypPUxAC/HNAuYrQOXrHf6+rr5+UBQgut/8ynjOjql+7bAOECO3/Q7nGCewm95AQ1SYhlrCj+tGCrRCSZy2cwkyCvWlBdShi4aMXHyXXoGQDtRDLJYbAiqMNAfMO" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
