--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/vkawards-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/vkawards-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -379,7 +379,7 @@
                         <div class="card-block"><p>“Спасибо, Илья ! Свадьба прошла на ураааа, по большей части благодаря тебе. Все было очень современно, весело, динамично, круто ! Мы и наши друзья остались очень довольны. Спаааасибоооооо!”</p></div>
                         <div class="mbr-author card-footer">
                             <div class="mbr-author-img"><a href="https://vk.com/y.shkirya" target="_blank"><img src="assets/images/bsz-16crmau-160x160.jpg" class="img-circle"></a></div>
-                            <div class="mbr-author-name">Владислав и Юлия.<br><em>vk.<a href="https://vk.com/y.shkirya" target="_blank">com</a>/y.shkirya</em></div>
+                            <div class="mbr-author-name">Владислав и Юлия.<br><em><a href="https://vk.com/y.shkirya" target="_blank">vk.com/y.shkirya</a></em></div>
                             <small class="mbr-author-desc"></small>
                         </div>
                     </div>
@@ -468,7 +468,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Напишите мне">
 
-                        <input type="hidden" value="lQ3JC1YCwlUlgFVVGniLCc+8pkfuEC+3FYZBKtPGxOvgtrSNHkY+3ddUBESL36TRHrwm4ASo8IjbJS/V2ni2iD2DVhCZ7gDrj7tE+swzCciGmF4vgo2Z+ZvtHlkRwQik" data-form-email="true">
+                        <input type="hidden" value="dDUS5IupwW5hF8Mv6afE18wRrnpFiJKoSzeoKFhsFZL318g+fFlrXcAIGtZHAgsUbGNmtbzlj4nvX28FR00pfbmloHFokDl/flk+8fM3pzJhZtPLqhIals+HzBrJXLzS" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -568,7 +568,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="pD9Da3GY6ZYZnRb6K9jja46qDX1xfe2/Zf4G6q2X+RnEE54omvFszHjFH3ONsys00iKQDtM7v3hATzaFz7io8W5TPYVYk13AVDKe/i1QVfUX2oAI5NULvy6Sa6f+n/pG" data-form-email="true">
+                    <input type="hidden" value="ii8FEnMeyemrnKCO8IUyLvL3JcNhfZbwB58UB5y7J8R1rPQHTIGqWgmg+Kq720L0oxpp1UoWTHmIzKyLtHTuJ3UF8CxMiMPJA7NrbvZMiZ1krYjS4PtkiwyQHULJdojQ" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-r-email">Email<span class="form-asterisk">*</span></label>
@@ -576,7 +576,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label class="form-control-label" for="contacts4-r-message">Message</label>
+                        <label class="form-control-label" for="contacts4-r-message">Сообщение</label>
                         <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="4" id="contacts4-r-message"></textarea>
                     </div>
                     <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-black">Связаться</button></div>
