--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/vkawards-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/vkawards-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -468,7 +468,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Напишите мне">
 
-                        <input type="hidden" value="dDUS5IupwW5hF8Mv6afE18wRrnpFiJKoSzeoKFhsFZL318g+fFlrXcAIGtZHAgsUbGNmtbzlj4nvX28FR00pfbmloHFokDl/flk+8fM3pzJhZtPLqhIals+HzBrJXLzS" data-form-email="true">
+                        <input type="hidden" value="6U01XDotDHwiMxwVPqogw9uBBuqcI83gBNLTuoTCrDvZM3NNrg+doN+u7VTXCeDGiMYps5Kg1wWrfxoCdsgximiLoIXJ8MeZGdeSk34O64C9G4MEFZc4GBqYTZr+FP0u" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -533,7 +533,7 @@
 
             <div class="mbr-table-md-up">
                 <div class="mbr-table-cell mbr-right-padding-md-up col-md-8 text-xs-center text-md-left">
-                    <h2 class="mbr-info-subtitle mbr-section-subtitle">Я угощу вас вкусным чаем или кофе, когда вы приедет ко мне на встречу в</h2>
+                    <h2 class="mbr-info-subtitle mbr-section-subtitle">Я угощу вас вкусным чаем или кофе, когда вы приедете ко мне на встречу в</h2>
                     <h3 class="mbr-info-title mbr-section-title display-2">КЛУБ ВЕДУЩИХ</h3>
                 </div>
 
@@ -568,7 +568,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ii8FEnMeyemrnKCO8IUyLvL3JcNhfZbwB58UB5y7J8R1rPQHTIGqWgmg+Kq720L0oxpp1UoWTHmIzKyLtHTuJ3UF8CxMiMPJA7NrbvZMiZ1krYjS4PtkiwyQHULJdojQ" data-form-email="true">
+                    <input type="hidden" value="KLx0TnfoE1bFAzw0YisbZMp2J6MEHkE4oUBmuNgvgVefzb4evdlPkcdCtXTb7MIVI44SSNOJgGujTVT4jjwb+6zsdvgJ+MBpIZXLp3woijcEY529vzKS8qbMGl/Oa9S4" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-r-email">Email<span class="form-asterisk">*</span></label>
