create github pages

--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/uqlpn774luq-2000x1332.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/uqlpn774luq-2000x1332.jpg);">
 
     
 
@@ -350,7 +350,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Есть вопросы? пишите">
 
-                        <input type="hidden" value="Feu1ibgn9hg+8tuzeFsIhPSc9N1DCRajBwtIzngZ678oC+VJnn5ItSGg3P0vEwW7hIhT5Xkd5HG8JuFm82sOuctwjfY9gM2hplzeVafMpo65CxllIanQ1EbPc0F9Az8e" data-form-email="true">
+                        <input type="hidden" value="G+zT25jsfqZo3n/+gerEs6wuc6Jwtivy9RM9WggXWLcZxMHS0+ewyvxDvJX//6A3cnLZrWb75McIvB9UW1YjNqloVLKRwmEehzKnbKzlxufMytuUhlCcFSVj2VF7eO4O" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
