--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/vkawards-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/vkawards-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -72,7 +72,7 @@
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
                     <h1 class="mbr-section-title display-1"><br><br><span style="font-size: 4.39rem; line-height: 1.1;">ИЛЬЯ </span><span style="font-size: 4.39rem; line-height: 1.1;">РАДЕЦКИЙ</span><br></h1>
-                    <p class="mbr-section-lead lead">Стильный, харизматичный медийный ведущий в Москве и по всему миру.<br><span style="font-size: 1.5rem; line-height: 1.5;">Свободное владение английским языком.</span><br></p>
+                    <p class="mbr-section-lead lead">Яркий, харизматичный медийный ведущий в Москве и по всему миру.<br><span style="font-size: 1.5rem; line-height: 1.5;">Свободное владение английским языком.</span><br></p>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-info" href="index.html#form1-6">УЗНАТЬ, СВОБОДНА ЛИ ДАТА?&nbsp;</a>  </div>
                 </div>
             </div>
@@ -468,7 +468,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Напишите мне">
 
-                        <input type="hidden" value="6U01XDotDHwiMxwVPqogw9uBBuqcI83gBNLTuoTCrDvZM3NNrg+doN+u7VTXCeDGiMYps5Kg1wWrfxoCdsgximiLoIXJ8MeZGdeSk34O64C9G4MEFZc4GBqYTZr+FP0u" data-form-email="true">
+                        <input type="hidden" value="7QMj0QybRjqx2ii2bNFpwUpifV4T13LGfOeEoBLGYMldMAwpI7W9Z0jEB9HwxltI0k/ak7g8uPmlIJscCyFwIdXg1mrH1lo+GfINI1t/qGlNxJ08yqN0n50ggN1iAZw9" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -568,7 +568,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="KLx0TnfoE1bFAzw0YisbZMp2J6MEHkE4oUBmuNgvgVefzb4evdlPkcdCtXTb7MIVI44SSNOJgGujTVT4jjwb+6zsdvgJ+MBpIZXLp3woijcEY529vzKS8qbMGl/Oa9S4" data-form-email="true">
+                    <input type="hidden" value="5/hnhiSS12gh2/C4IVYnMVJaKPLnKbb7cF+Ydw2peHIN0bkQMFKz4YOD0/9CvRLcLn/Jzl4wWK85ddQBbTKcAaGR1Wf4euUopbda8Na+27+y1vbZwXRbfX2EpbCRY7ix" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-r-email">Email<span class="form-asterisk">*</span></label>
