--- a/page1.html
+++ b/page1.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">ОБО МНЕ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#msg-box4-0" aria-expanded="false">ВИДЕО</a></li><li class="nav-item"><a class="nav-link link" href="index.html#testimonials1-4" aria-expanded="false">ОТЗЫВЫ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#form1-6" aria-expanded="false">КОНТАКТЫ</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#form1-6" target="_blank">+7(916) 774 15 91</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#msg-box7-2">ОБО МНЕ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#msg-box4-0" aria-expanded="false">ВИДЕО</a></li><li class="nav-item"><a class="nav-link link" href="index.html#testimonials1-4" aria-expanded="false">ОТЗЫВЫ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#form1-6" aria-expanded="false">КОНТАКТЫ</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#form1-6" target="_blank">+7(916) 774 15 91</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/uqlpn774luq-2000x1332.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-c" style="background-image: url(assets/images/uqlpn774luq-2000x1332.jpg);">
 
     
 
@@ -350,7 +350,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Есть вопросы? пишите">
 
-                        <input type="hidden" value="G+zT25jsfqZo3n/+gerEs6wuc6Jwtivy9RM9WggXWLcZxMHS0+ewyvxDvJX//6A3cnLZrWb75McIvB9UW1YjNqloVLKRwmEehzKnbKzlxufMytuUhlCcFSVj2VF7eO4O" data-form-email="true">
+                        <input type="hidden" value="sPhoAvtlwUA+LyXJzZfnDFVMcvmD/hrl8Q55AeU77ninekn6Ji0glV/H+Tl3TQ3u3ePxXDXMz22lp4RYYVDZfZ9kijx5Fe/2nRKuItCEmJuigYmfSW6rKKLLlzfEYMfs" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
