create github pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   
   
 </head>
-  
 <body>
 <section id="menu-l">
 
@@ -45,25 +44,12 @@
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse"
-                            data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm"
-                        id="exCollapsingNavbar"><li class="nav-item">
-                      <a class="nav-link link" href="index.html#msg-box7-2">ОБО МНЕ</a></li><li class="nav-item dropdown">
-                      <a class="nav-link link" href="index.html#msg-box4-0" aria-expanded="false">ВИДЕО</a>
-                      </li><li class="nav-item"><a class="nav-link link" href="index.html#testimonials1-4" aria-expanded="false">
-                      ОТЗЫВЫ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#form1-6"
-                                                                      aria-expanded="false">КОНТАКТЫ</a></li>
-                      <li class="nav-item nav-btn">
-                       
-                        <a class="nav-link btn btn-white btn-white-outline"
-                                                      href="tel:+7(916) 774 15 91" target="_blank">+7(916) 774 15 91</a></li>
-                  </ul>
-                    <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse"
-                            data-target="#exCollapsingNavbar">
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#msg-box7-2">ОБО МНЕ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#msg-box4-0" aria-expanded="false">ВИДЕО</a></li><li class="nav-item"><a class="nav-link link" href="index.html#testimonials1-4" aria-expanded="false">ОТЗЫВЫ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#form1-6" aria-expanded="false">КОНТАКТЫ</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#form1-6" target="_blank">+7(916) 774 15 91</a></li></ul>
+                    <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
 
@@ -75,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/vkawards-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/vkawards-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -111,7 +97,7 @@
                   <h3 class="mbr-section-title display-2">Обо мне</h3>
                   <div class="lead">
 
-                    <p> Яркий, харизматичный, профессиональный медийный ведущий.<br><br>-&nbsp;Опыт ведения мероприятий - более 5 лет <br><br>-&nbsp;Опыт проведения масштабных мероприятий, например - самая большая музыкальная премия Санкт-Петербурга <br><br>-Сотрудничество с крупными СМИ: Телеканал СТС International – ведущий новостей, репортажи со светских мероприятий<br><br>- В качестве специального корреспондента &nbsp;делал серию репортажей о звездах танцевальной культуры Европы &nbsp;и США на Amsterdam Dance Event и Miami Music Week.<br><br>- Участник ТВ-шоу на Первом Канале, снимался в клипах известных артистов.&nbsp;<br><br>- Резидент Клуба Ведущих Москвы<br> &nbsp; &nbsp;</p>
+                    <p> Яркий, харизматичный, профессиональный медийный ведущий.<br><br>-&nbsp;Опыт ведения мероприятий - более 5 лет <br><br>-&nbsp;Опыт проведения масштабных мероприятий, включая &nbsp;самую большую музыкальную премию Санкт-Петербурга <br><br>-Сотрудничество с крупными СМИ: Телеканал СТС International – ведущий новостей, репортажи со светских мероприятий<br><br>- В качестве специального корреспондента &nbsp;делал серию репортажей о звездах танцевальной культуры Европы &nbsp;и США на Amsterdam Dance Event и Miami Music Week.<br><br>- Участник ТВ-шоу на Первом Канале, снимался в клипах известных артистов.&nbsp;<br><br>- Резидент Клуба Ведущих Москвы<br> &nbsp; &nbsp;</p>
 
                   </div>
 
@@ -592,7 +578,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Напишите мне">
 
-                        <input type="hidden" value="GDe3By3qxGzcGNERzqc+H+U8Wbtg14z7e+Zw8UC/mFRiFHmaYDyF0iniO7FFEIviT9UgvCBsN/ZD06iMceJsszdOz0qMxrNhOVxlx1ukMFEtWZ12loA8ZS+9LC9jdJPB" data-form-email="true">
+                        <input type="hidden" value="j67wV6/xCenBwePS30dZ57T1dvricGaAaOEJDbOmWhYFnLF7ONMFUpxQeGy0UIvqZ/ZG8rCTLWCvqLno6RXzDPUSQhMynly/yyN21eVKMj7BGecoLWdcHcSEH1k8jJit" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -692,7 +678,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="BHJFFRY4c6mHwMM5whSJZAFIQsVLZlXIHlQajBmF5ySwU64ftg9urD8hBvsRiKLBcMFuOBgatnrUdl0n7etfjUYunMUtv+/L2igUzEEziFwlZHC5MHBmJDTYor/AECGb" data-form-email="true">
+                    <input type="hidden" value="it1OVXC5RRvLBvbiJVD1OkKRb7JYHCQjQVVrO2NbDXNUOyu6BX66tyL7kn1JiVOzecwv9Zhp43JFaBvL40D0fkjuo28iYDIzzU7PbkzdRMqGRBqzHaqjTskgR8dQiZCb" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-r-email">Email<span class="form-asterisk">*</span></label>
@@ -736,10 +722,5 @@
   
   
   <input name="animation" type="hidden">
-  <!-- BEGIN JIVOSITE CODE {literal} -->
-<script type='text/javascript'>
-(function(){ var widget_id = 'wnmEhEpXa9';var d=document;var w=window;function l(){
-var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
-<!-- {/literal} END JIVOSITE CODE -->
   </body>
 </html>
