--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">website creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-c" data-rv-view="142" style="background-image: url(assets/images/uqlpn774luq-2000x1332.jpg);">
+<section class="engine"><a href="https://mobirise.co/g">how to create your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-c" data-rv-view="142" style="background-image: url(assets/images/uqlpn774luq-2000x1332.jpg);">
 
     
 
@@ -350,7 +350,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Есть вопросы? пишите">
 
-                        <input type="hidden" value="ynX21pbRewcgIVAxar2UzAU+8vFndiO+s57GctQ1dQjovhaHA/0G/iGJtx+zYdFiSUmjuZhc/lfe2CT39V6E//ujU6s6M1iX632iVt3KeDtHXUsUYihksrFEGKzPf0FB" data-form-email="true">
+                        <input type="hidden" value="SQhLvE9uQko2DorK3gq710mCRWhC6YfwCRHZVX5pqGXz42sLz2QTxCwx3saFS/WtvXs8DFoQ7vLFsEmEyReBqBwccb5u9eYOkA+jLE7oB6a10zF8TyfUzq/zC0mkz8n7" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
