--- a/index.html
+++ b/index.html
@@ -46,11 +46,22 @@
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" 
+                            data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#msg-box7-2">ОБО МНЕ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#msg-box4-0" aria-expanded="false">ВИДЕО</a></li><li class="nav-item"><a class="nav-link link" href="index.html#testimonials1-4" aria-expanded="false">ОТЗЫВЫ</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#form1-6" aria-expanded="false">КОНТАКТЫ</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#form1-6" target="_blank">+7(916) 774 15 91</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm"
+                        id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link"
+                                                                        href="index.html#msg-box7-2">ОБО МНЕ</a></li>
+                      <li class="nav-item dropdown"><a class="nav-link link" href="index.html#msg-box4-0"
+                                                       aria-expanded="false">ВИДЕО</a>
+                      </li><li class="nav-item"><a class="nav-link link" href="index.html#testimonials1-4"
+                                                   aria-expanded="false">ОТЗЫВЫ</a></li><li class="nav-item dropdown">
+                      <a class="nav-link link" href="index.html#form1-6" aria-expanded="false">КОНТАКТЫ</a>
+                      </li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline"
+                                                           href="index.html#form1-6" target="_blank"><a href="tel:+79167741591">+7(916) 774 15 91</a>
+                      </a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -606,7 +617,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2" data-rv-view="6" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>&nbsp;(c) 2017</p>
+        <p>&nbsp;(c) 2018</p>
     </div>
 </footer>
 
