--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                                    aria-expanded="false">ОТЗЫВЫ</a></li><li class="nav-item dropdown">
                       <a class="nav-link link" href="index.html#form1-6" aria-expanded="false">КОНТАКТЫ</a>
                       </li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline"
-                                                           href="index.html#form1-6" target="_blank"><a href="tel:+79167741591">+7(916) 774 15 91</a>
+                                                           href="tel:+79167741591" target="_blank">+7(916) 774 15 91
                       </a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
