--- a/page1.html
+++ b/page1.html
@@ -423,5 +423,5 @@
   
   
   <input name="animation" type="hidden">
-  </body>
+ <!--Start Prodalet code {literal}--><script> (function (d,w) { var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; var dt = new Date().getTime(); s.type = "text/javascript"; s.id="plt_main"; s.src="https://prodalet.ru/bundles/api/main.js?h="+dt; s.setAttribute("data-pltkey", "5b570c9f40b424f9238b4609"); s.setAttribute("data-plthost","https://prodalet.ru"); s.async = true; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document,window);</script><!--End Prodalet code {/literal}--> </body>
 </html>
